--- a/client_app/pages/css/styles.css
+++ b/client_app/pages/css/styles.css
@@ -20,6 +20,13 @@ body {
     text-align: center;
 }
 
+#image-movie {
+    width: 230px;
+    height: 350px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
 .flip-card {
     margin: 10px;
     width: 230px;
